...
    'tour': 'Travel',
    'abroad': 'Travel',
    'passport': 'Travel',
    'suitcase': 'Travel',

    // Celebration
    'birthday': 'Celebration',
    'party': 'Celebration',
    'celebrate': 'Celebration',
    'celebration': 'Celebration',
    'anniversary': 'Celebration',
    'wedding': 'Celebration',
    'graduation': 'Celebration',
...
